--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <!--Can't find substitution for tag [blog.ieCssRetrofitLinks]-->
 <meta content='24horas' property='og:url'/>
 <meta content='VIDEO FULL' property='og:title'/>
-<meta property="og:image" content="https://i.ibb.co/C77ps2y/B25.jpg">
+<meta property="og:image" content="https://i.ibb.co/grd5P6P/bb25.jpg">
 <meta content='' property='og:description'/>
 <style id='page-skin-1' type='text/css'><!--
 /*
